Fix video source path and update HTML structure

--- a/My_ite.html
+++ b/My_ite.html
@@ -85,7 +85,7 @@
 <body>
     <h1>Найкращий хлопець у світі</h1>
     <video id="myVideo" controls autoplay>
-        <source src="C:\Users\Acer\Desktop\MY.MOV" type="video/mp4">
+        <source src="Mihailo\MY.MOV" type="video/mp4">
         Ваш браузер не підтримує відтворення відео.
     </video>
 
@@ -115,3 +115,4 @@
     </script>
 </body>
 </html>
+
