--- a/My_ite.html
+++ b/My_ite.html
@@ -85,7 +85,7 @@
 <body>
     <h1>Найкращий хлопець у світі</h1>
     <video id="myVideo" controls autoplay>
-        <source src="Mihailo\MY.MOV" type="video/mp4">
+        <source src="Myhailo\MY.MOV" type="video/mp4">
         Ваш браузер не підтримує відтворення відео.
     </video>
 
@@ -115,4 +115,5 @@
     </script>
 </body>
 </html>
+
 
